[metadata]
name = imediff
version = attr: imediff.__main__.VERSION
description = Interactive Merge Editor for DIFF2/3
long_description = file: README.md
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
        Topic :: Text Processing :: General
        Environment :: Console :: Curses
        License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.9
        Operating System :: POSIX :: Linux
#author = Osamu Aoki
#author_email = osamu@debian.org
author =
	Osamu Aoki
	Jarno Elonen
author_email =
	osamu@debian.org
	elonen@iki.fi
maintainer = Osamu Aoki
maintainer_email = osamu@debian.org
url = https://github.com/osamuaoki/imediff
project_urls =
	Documentation = https://github.com/osamuaoki/imediff
keywords = imediff
license = GPLv2+
scripts = bin/git-ime
test_suite = test.test_diff23lib
cmdclass =
	build = build_extra.build_extra
	build_i18n = build_i18n.build_i18n

[options]
package_dir =
	= src
packages = find:
python_requires = >=3.9
setup_requires = setuptools >= 42

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
	imediff = imediff.__main__:main

[options.data_files]
        share/man/man1 = doc/imediff.1, doc/git-ime.1
        lib/git-core/mergetools = mergetools/imediff
        bin = bin/git-ime

[build]
i18n=True
icons=False
help=False

[build_i18n]
domain=imediff
